<resources>
    <string name="app_name">CM2023I</string>
    <!-- Recursos de botones principales-->
    <string name="tv1">Menú Principal</string>
    <string name="btn1_text">Controles básicos</string>
    <string name="btn2_text">Controles intermedios</string>
    <string name="btn3_text">Controles avanzados</string>

    <!-- Recursos de botones layout básico-->
    <string name="tv1_1">Menú controles básicos</string>
    <string name="btn1_1_text">Ejemplos text 1</string>
    <string name="btn1_2_text">Ejemplos text 2</string>
    <string name="btn1_3_text">Ejemplos text 3</string>
    <string name="btn1_4_text">Ejemplos radiobutton</string>
    <string name="btn1_5_text">Ejemplos checkbox</string>
    <string name="btn1_6_text">Ejemplos spinner</string>
    <string name="btn1_0_text">Volver</string>

    <!-- Recursos de botones layout intermedio-->
    <string name="tv2_1">Menú controles intermedios</string>
    <string name="btn2_1_text">Navegar entre Actividades</string>
    <string name="btn2_2_text">Shared Preferences</string>
    <string name="btn2_3_text">SQLite</string>
    <string name="btn2_4_text">Sql Server</string>
    <string name="btn2_5_text">Ejemplos 5</string>
    <string name="btn2_0_text">Volver</string>

    <!-- Recursos de botones layout avanzado-->
    <string name="tv3_1">Menú controles avanzados</string>
    <string name="btn3_1_text">Recycler View</string>
    <string name="btn3_2_text">Mapas de Google</string>
    <string name="btn3_3_text">Reproductor de Música</string>
    <string name="btn3_4_text">Tomar Fotografías</string>
    <string name="btn3_5_text">Ejemplos checkbox 3</string>
    <string name="btn3_0_text">Volver</string>

    <!-- Recursos de controles TextoBasico1 -->
    <!-- TextViews -->
    <string name="tv1_1_1">Texto básico 1</string>
    <string name="tv1_1_2">Ingrese un usuario</string>
    <string name="tv1_1_3">Ingrese un password</string>
    <string name="tv1_1_4">Ingrese un código de 4 dígitos</string>
    <!-- Text -->
    <string name="txt1_1_1">Usuario</string>
    <string name="txt1_1_2">Password</string>
    <string name="txt1_1_3">Código</string>
    <!-- Buttons -->
    <string name="btn1_1_1_text">Mostrar</string>
    <string name="btn1_1_0_text">Volver</string>

    <!-- Recursos de controles TextoBasico2 -->
    <!-- TextViews -->
    <string name="tv1_2_1">Ingrese un usuario</string>
    <string name="tv1_2_2">Ingrese un password</string>
    <string name="tv1_2_3">Ingrese un código de 4 dígitos</string>
    <!-- Text -->
    <string name="txt1_2_1">Usuario</string>
    <string name="txt1_2_2">Password</string>
    <string name="txt1_2_3">Código</string>
    <!-- Buttons -->
    <string name="btn1_2_1_text">Mostrar</string>
    <string name="btn1_2_0_text">Volver</string>

    <!-- Recursos de controles Intermedios 1 -->
    <!-- TextViews -->
    <string name="tv2_1_0">Navegar entre actividades</string>
    <string name="tv2_1_1">Primera Actividad</string>
    <string name="tv2_1_2">Segunda Actividad</string>
    <!-- Text -->
    <string name="txt2_1_1">Ingrese un valor</string>
    <string name="txt2_1_2">Ingrese un valor</string>
    <!-- Buttons -->
    <string name="btn2_1_1_text">Siguiente</string>
    <string name="btn2_1_2_text">Regresar</string>
    <string name="btn2_1_0_text">Volver</string>

    <!-- Recursos de controles Intermedios 2 -->
    <!-- TextViews -->
    <string name="tv2_2_1">Shared Preferences</string>
    <string name="tv2_2_2">Ejemplo con shared preferences</string>
    <string name="tv2_2_3">Ejemplo sin shared preferences</string>
    <!-- Text -->
    <string name="txt2_2_1">Ingrese un valor</string>
    <string name="txt2_2_2">Ingrese otro valor</string>
    <!-- Buttons -->
    <string name="btn2_2_1_text">Guardar</string>
    <string name="btn2_2_2_text">Mostrar</string>
    <string name="btn2_2_0_text">Volver</string>


</resources>