<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextoBasico1">

    <TextView
        android:id="@+id/tv1_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv1_1_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt1_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt1_1_1"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="@+id/tv1_1_2"
        app:layout_constraintTop_toBottomOf="@+id/tv1_1_2" />

    <EditText
        android:id="@+id/txt1_1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt1_1_2"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="@+id/tv1_1_3"
        app:layout_constraintTop_toBottomOf="@+id/tv1_1_3" />

    <Button
        android:id="@+id/btn1_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:onClick="Mostrar"
        android:text="@string/btn1_1_1_text"
        app:layout_constraintStart_toStartOf="@+id/txt1_1_3"
        app:layout_constraintTop_toBottomOf="@+id/txt1_1_3" />

    <TextView
        android:id="@+id/tv1_1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="34dp"
        android:text="@string/tv1_1_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1_1_1" />

    <EditText
        android:id="@+id/txt1_1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt1_1_3"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="@+id/tv1_1_4"
        app:layout_constraintTop_toBottomOf="@+id/tv1_1_4" />

    <TextView
        android:id="@+id/tv1_1_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv1_1_4"
        app:layout_constraintStart_toStartOf="@+id/txt1_1_2"
        app:layout_constraintTop_toBottomOf="@+id/txt1_1_2" />

    <TextView
        android:id="@+id/tv1_1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv1_1_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1_1_1" />

    <Button
        android:id="@+id/btn1_1_0"
        android:layout_width="137dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="18dp"
        android:onClick="Volver"
        android:text="@string/btn1_1_0_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>