<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Almacenamiento1">

    <TextView
        android:id="@+id/tv_2_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="39dp"
        android:text="@string/tv2_2_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt2_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="23dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt2_2_1"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2_2_2" />

    <EditText
        android:id="@+id/txt2_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt2_2_2"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="@+id/tv2_2_3"
        app:layout_constraintTop_toBottomOf="@+id/tv2_2_3" />

    <TextView
        android:id="@+id/tv2_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:text="@string/tv2_2_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_2_2_1" />

    <TextView
        android:id="@+id/tv2_2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv2_2_3"
        app:layout_constraintStart_toStartOf="@+id/txt2_2_1"
        app:layout_constraintTop_toBottomOf="@+id/txt2_2_1" />

    <Button
        android:id="@+id/btn2_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="27dp"
        android:onClick="Guardar"
        android:text="@string/btn2_2_1_text"
        app:layout_constraintStart_toStartOf="@+id/txt2_2_2"
        app:layout_constraintTop_toBottomOf="@+id/txt2_2_2" />

    <Button
        android:id="@+id/btn2_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="12dp"
        android:onClick="Mostrar"
        android:text="@string/btn2_2_2_text"
        app:layout_constraintStart_toStartOf="@+id/btn2_2_1"
        app:layout_constraintTop_toBottomOf="@+id/btn2_2_1" />

    <Button
        android:id="@+id/btn2_2_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="25dp"
        android:text="@string/btn2_2_0_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>