<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutIntermedio">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv2_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/tv2_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Opcion1"
            android:text="@string/btn2_1_text" />

        <Button
            android:id="@+id/btn2_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Opcion2"
            android:text="@string/btn2_2_text" />

        <Button
            android:id="@+id/btn2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2_3_text" />

        <Button
            android:id="@+id/btn2_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Volver"
            android:text="@string/btn1_0_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>