<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alcamenamiento1">

    <TextView
        android:id="@+id/tv2_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="27dp"
        android:text="@string/tv2_1_1"
        app:layout_constraintBottom_toTopOf="@+id/txt2_2_1"
        app:layout_constraintStart_toStartOf="@+id/txt2_2_1" />

    <EditText
        android:id="@+id/txt2_2_1"
        android:layout_width="251dp"
        android:layout_height="52dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt2_1_1"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/btn2_2_1"
        app:layout_constraintStart_toStartOf="@+id/btn2_2_1" />

    <Button
        android:id="@+id/btn2_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="169dp"
        android:text="@string/btn2_1_1_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="17dp"
        android:text="@string/btn2_1_2_text"
        app:layout_constraintStart_toStartOf="@+id/btn2_2_1"
        app:layout_constraintTop_toBottomOf="@+id/btn2_2_1" />

    <Button
        android:id="@+id/btn2_2_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="17dp"
        android:text="@string/btn2_1_0_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>