<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutBasico">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="607dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1_1_text" />

        <Button
            android:id="@+id/btn1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1_2_text" />

        <Button
            android:id="@+id/btn1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1_3_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="51dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn1_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1_0_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>